log
Thu 09 May 2024 05:41:23 PM UTC: 
 tests:  1|8
total_score: 0/70
1395f8a
Thu 09 May 2024 05:44:22 PM UTC: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
3f03811
Thu 09 May 2024 05:52:20 PM UTC: 
 treemap.c | 50 +++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 49 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
2fe0523
Thu 09 May 2024 06:02:57 PM UTC: 
 treemap.c | 69 +++++++++++++++++++++++++++------------------------------------
 1 file changed, 30 insertions(+), 39 deletions(-)
 tests:  4|7
total_score: 5/70
a47745f
Thu 09 May 2024 06:04:38 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
796612b
Thu 09 May 2024 06:32:20 PM UTC: 
 treemap.c | 60 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 59 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:159:25: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  159 |         temp->pair->key = succKey;
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
608a869
Thu 09 May 2024 06:32:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:156:13: error: unused variable ‘succKey’ [-Werror=unused-variable]
  156 |         int succKey = *((int*)successor->pair->key);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a2cf2d6
Thu 09 May 2024 06:32:40 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
b22988d
